examples/examples/counters/snapshots/counters__tests____test_counter_simple.snap
---
source: examples/examples/counters/./tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 10 },
    content: [
        "╭──────────────────╮          ",
        "│    Add Counter   │          ",
        "╰──────────────────╯          ",
        "╭────╮╭────╮╭───╮             ",
        "│ -1 ││ +1 ││ x │ count: 0    ",
        "╰────╯╰────╯╰───╯             ",
        "                              ",
        "                              ",
        "                              ",
        "                              ",
    ],
    styles: [
        x: 0, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
